[package]
name = "dante-control-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns-sd = "0.7.4"
futures-util = "0.3.28"
async-std = "1.12.0"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"