[package]
name = "dante-control-rs"
version = "0.1.0"
edition = "2021"
authors = ["Cameron VanderTuig"]
description = "A Dante discovery and control command line tool utilizing dante-control-rs"
repository = "https://github.com/IRSMsoso/dante-cli"
homepage = "https://github.com/IRSMsoso/dante-cli"
license = "Apache-2.0"
readme = "README.md"
keywords = ["dante", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns-sd = "0.7.4"
log = "0.4.20"