[package]
name = "dante-control-rs"
version = "0.4.0"
edition = "2021"
authors = ["Cameron VanderTuig"]
description = "Dante discovery and control as a rust library"
repository = "https://github.com/IRSMsoso/dante-control-rs"
homepage = "https://github.com/IRSMsoso/dante-control-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["dante", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns-sd = "0.7.4"
log = "0.4.20"
bytes = "1.4.0"
thiserror = "1.0.47"
ascii = "1.1.0"
hex = "0.4.3"